<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:orientation="vertical"
    android:padding="16dp">


    <ImageView
        android:id="@+id/dialog_cover_image"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:contentDescription="@string/cover_image"
        android:padding="2dp"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_library_books_24" />

    <LinearLayout
            android:gravity="center"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="end"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="3dp"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/author" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/isbnno"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/publisher"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/rent"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:gravity="start"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/book_dialog_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="#000"
                    android:textSize="20sp"
                     />

                <TextView
                    android:id="@+id/dialog_book_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="#000"
                    android:textSize="20sp"
                     />

                <TextView
                    android:id="@+id/dialog_book_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="#000"
                    android:textSize="20sp"

                    />
                <TextView
                    android:id="@+id/dialog_book_publisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="#000"
                    android:textSize="20sp"

                    />
                <TextView
                    android:id="@+id/dialog_book_rent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="#000"
                    android:textSize="18sp"

                    />



            </LinearLayout>



        </LinearLayout>


        </LinearLayout>