<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RentedFragment">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/search"
            android:layout_marginStart="5dp"
            android:layout_width="275dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:autofillHints="" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_marginTop="5dp"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:entries="@array/sort_values_rented" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rented_book_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/content"
        android:scrollbars="vertical"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="180dp"
        android:layout_height="168dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/no_books_rented"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_refresh_24"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/refresh" />


</RelativeLayout>