<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookFragment"
    android:orientation="vertical">
    <LinearLayout
        android:layout_marginTop="5dp"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/search_book"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_weight="3"
            android:layout_height="48dp"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:textSize="20sp"
            android:autofillHints="" />

        <Spinner
            android:id="@+id/sort"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:entries="@array/sort_values" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/book_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/content"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:text="@string/sorry_no_books_available_currently"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:textColor="@color/black"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/refresh_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/refresh"
        android:src="@drawable/baseline_refresh_24"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

</RelativeLayout>